fixup! fixup! fixup! fixup! fixup! fixup! Add dark mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -239,7 +239,7 @@ code {
 
     &--blue {
       @extend .box--border;
-      border-color: var(--blue_lighter);
+      border-color: var(--main-blue--light);
 
       &:before {
         color: var(--main-blue);
